--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -27,4 +27,4 @@
   %code http://placedicks.com/500/500q=bigger+dicks
   \. And, of course, it goes without saying that the
   %code 500/500
-  represent the width and height. Whelp, I said it anyway. Go have a dick!
+  represents the width and height. Whelp, I said it anyway. Now go place a dick!
