--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -22,7 +22,7 @@
 
 %p 
   When you ask for a dick we'll fire off a random Google Image search with the query: 
-  %code= DicksController::DICK_QUERY
+  %code= DicksController::DICKS_QUERY
   \. But, you can customize it by passing in a "q" parameter to the placedicks URL like:
   %code http://placedicks.com/500/500q=bigger+dicks
   \. And, of course, it goes without saying that the
